# EoPI

./: .gitmodules  README.md
cpp/: CMakeLists.txt
cpp/src/ComputeParity/: ComputeParity.cpp
